ax25apps (1.0.2)
	* Reverted ax25ipd to compile with -DTERMIO vs. -DTERMIOS. Using the latter 
	  causes ax25ipd to randomly send garbage traffic on some platforms.

-- Lee Woldanski <ve7fet@tparc.org>  Mon, 12 Sep 2011 20:30:00 -0800

ax25apps (1.0.1)
	* Modified the spec file to handle different dependency names for Mandriva

-- Lee Woldanski <ve7fet@tparc.org>  Mon, 14 Feb 2011 10:30:00 -0800

ax25apps (1.0.1)
	* Changed the package name to ax25apps from ax25-apps since the '-' really makes 
	  creating binary packages a pain (does not comply with most policies)
        * Changed the way version is parsed in configure.ac to be passed to the rpm
          spec file.
        * Changed the spec file to install the package in the proper places as well
          as the URL's to point to here. Also added dependency checking.

-- Lee Woldanski <ve7fet@tparc.org>  Sun, 30 Jan 2011 11:00:00 -0800

ax25-apps (1.0.0)
	* This is a custom release, not associated with the official source.
	* This package has been in beta for so long, it is time to release version 1.0.0.
	* Cleaned up source directories, put the docs, conf files, and mans 
	  in their own folders
	* Rebuilt the configure.ac re-checking dependencies
	* Fixed the configure.ac so the rpm building support works
	* Updated configure to use current GNU autotools
	* Used CVS code (Jan 12 2011) for ax25rtd, ax25mond, call, listen and 
	  used patched source from Bernard Pidoux for ax25ipd
	* ax25ipd now supports:
	   *dynamic DNS hosts (Steve Fraser vk5asf, Jun 2005)
	   *ability to route packets over axip links that are not from the 
	    gateway callsign (Cathryn Mataga)
	   *integrates the dynamic DNS patch and uses mutex and threads
	    if DNS fails on start, route is set to 0 and rechecked about an 
	    hour later (Cathryn Mataga)
	   *ax25ipd.conf now supports additional flags l and p (Cathryn Mataga)
	* ax25ipd should route as before, except in the case when packets 