@@ -1,5 +1,4 @@
-/* $Id: ax25rtctl.c,v 1.4 2009/06/27 22:30:23 ralf Exp $
- *
+/*
  * Copyright (c) 1996 Joerg Reuter (jreuter@poboxes.com)
  *
  * This program is free software; you can redistribute it and/or modify
@@ -251,7 +250,7 @@ static void Version(void)
 	int sock;
 	char buf[256];
 
-	printf("ax25rtctl $Revision: 1.4 $\n");
+	printf("ax25rtctl version " VERSION "\n");
 	sock = open_socket();
 	wsock(sock, "version\n");
 	read(sock, buf, sizeof(buf));
